Added Customers controller and new view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,11 @@
 <body>
 
 	<% if flash[:notice] %>
-		<p id="notice">
-			<%= flash[:notice] %>
-		</p>
+		<p id="notice"><%= flash[:notice] %></p>
 	<% end -%>
 
 	<% if flash[:alert] %>
-		<p id="alert">
-			<%= flash[:alert] %>
-		</p>
+		<p id="alert"><%= flash[:alert] %></p>
 	<% end -%>
 	
 <%= yield %>
