Add basic restaurant navigation links

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,3 +3,7 @@
 <p><%= @restaurant.city %>, <%= @restaurant.province %></p>
 <p><%= @restaurant.postal_code %></p>
 <p><%= @restaurant.phone_number %></p>
+<p><%= @restaurant.email %></p>
+<p><strong>Description:</strong> <%= @restaurant.description %></p>
+
+<p><%= link_to "Home", root_path %> | <%= link_to "Edit", edit_restaurant_path(@restaurant) %></p>
