--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,4 +1,4 @@
-<h2><%= restaurant.name %></h2>
+<h2><%= link_to restaurant.name, restaurant %></h2>
 <p><%= restaurant.address %></p>
 <p><%= restaurant.city %>, <%= restaurant.province %></p>
 <p><%= restaurant.postal_code %></p>
