--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,5 +1,10 @@
 <h1>Edit Restaurant</h1>
+<p>
+	<%= link_to "Go Back", @restaurant %>
+</p>
 
 <%= render "form" %>
 
-<%= link_to "Delete Restaurant", @restaurant, method: :delete, data: {confirm: "Are you sure you want to do this?"} %>
+<p>
+	<%= link_to "Delete Restaurant", @restaurant, method: :delete, data: {confirm: "Are you sure you want to do this?"} %>
+</p>
