--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,3 +1,10 @@
 <h1><%= @customer.name %></h1>
 <p><%= @customer.email %></p>
-<p><%= link_to "edit", edit_customer_path %></p>
+<p><%= link_to "Home", root_path %> 
+
+	<% if current_user.id == @customer.id && current_user.is_a?(Customer) %>
+		| <%= link_to "Edit", edit_customer_path(@customer) %>
+	<% else %>
+		&nbsp;
+	<% end %>
+</p>
