--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -8,7 +8,7 @@
 
 <p><%= link_to "Home", root_path %> 
 
-	<% if current_user.id == @restaurant.id %>
+	<% if current_user.id == @restaurant.id && current_user.is_a?(Restaurant) %>
 		| <%= link_to "Edit", edit_restaurant_path(@restaurant) %>
 	<% else %>
 		&nbsp;
