--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,11 +1,5 @@
 <h1><%= @restaurant.name %></h1>
 
-<p><%= @restaurant.address %></p>
-<p><%= @restaurant.city %>, <%= @restaurant.province %></p>
-<p><%= @restaurant.postal_code %></p>
-<p><%= @restaurant.phone_number %></p>
-<p><%= mail_to @restaurant.email, @restaurant.email %></p>
-
 <p>
 	<strong>Cuisines</strong>
 	<ul>
@@ -16,6 +10,14 @@
 </p>
 
 <p><strong>Description:</strong> <%= @restaurant.description %></p>
+
+<div class="contact_info">
+<p><%= @restaurant.address %><br>
+<%= @restaurant.city %>, <%= @restaurant.province %><br>
+<%= @restaurant.postal_code %></p>
+<p><%= @restaurant.phone_number %><br>
+<%= mail_to @restaurant.email, @restaurant.email %></p>
+</div>
 
 <p>
 	<%= link_to "Home", root_path %> 
