--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit <%= @customer.name %>'s Profile</h1>
 <p>
-	<%= link_to "Go Back", @restaurant %>
+	<%= link_to "Go Back", @customer %>
 </p>
 
 <%= render 'form' %>
