--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,15 @@
 <%= form_for @customer do |f| %>
+	<% if @customer.errors.any? %>
+		<div class="error-description">
+			<h2><%= pluralize(@customer.errors.count, "error") %> prohibited this information from being saved:</h2>
+
+			<ul>
+				<% @customer.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
 	<p>
 		<%= f.label :name %><br />
 		<%= f.text_field :name %>
