--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,6 +19,14 @@
 <%= mail_to @restaurant.email, @restaurant.email %></p>
 </div>
 
+<h2>Make a Reservation at <%= @restaurant.name %></h2>
+<%= form_tag do %>
+	<p><%= label_tag :Date %><br />
+	<%= select_datetime Date.today, prefix: :start_date, discard_year: :true, discard_minute: :true %>
+	<%= hidden_field_tag(:restaurant_id, @restaurant.id ) %></p>
+	<%= submit_tag "Make a Reservation!" %>
+<% end %>
+
 <p>
 	<%= link_to "Home", root_path %> 
 	<% if current_user && current_user.id == @restaurant.id && current_user.is_a?(Restaurant)%>
