Added search functionality for restaurant name

--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -9,8 +9,8 @@
 <p><%= restaurant.description %></p>
 
 <div class="contact_info">
-<p><%= restaurant.address %></p>
-<p><%= restaurant.city %>, <%= restaurant.province %></p>
-<p><%= restaurant.postal_code %></p>
+<p><%= restaurant.address %><br>
+<%= restaurant.city %>, <%= restaurant.province %><br>
+<%= restaurant.postal_code %></p>
 <p><%= restaurant.phone_number %></p>
 </div>
