--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,11 +20,20 @@
 </div>
 
 <h2>Make a Reservation at <%= @restaurant.name %></h2>
-<%= form_tag do %>
-	<p><%= label_tag :Date %><br />
-	<%= select_datetime Date.today, prefix: :start_date, discard_year: :true, discard_minute: :true %>
-	<%= hidden_field_tag(:restaurant_id, @restaurant.id ) %></p>
-	<%= submit_tag "Make a Reservation!" %>
+<%= simple_form_for @reservation do |f|%>
+	<p><%= f.label :Date %><br />
+	<%= f.datetime_select :start_date_time_date, discard_year: :true, discard_minute: :true %>
+
+</p>
+	<%= f.submit "Make a Reservation!" %>
+<% end %>
+
+
+<%= simple_form_for @reservation do |f| %>
+  <%= f.input :start_date_time_date, as: :date, discard_year: :true, label: 'Date' %>
+  <%= f.input :start_date_time_hour, collection: 9..22, label: 'Hour' %>
+  <%= f.input :start_date_time_min, collection: [0], label: 'Minute' %>
+  <%= f.submit %>
 <% end %>
 
 <p>
