--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -5,7 +5,10 @@
 
 <ul>
 	<% for reservation in @reservations %>
-		<li><%= link_to reservation.restaurant.name, reservation.restaurant %> for <%= reservation.start_date_time.strftime("%A, %B %e @ %l:%m %p") %></li>
+		<li>
+			<%= link_to reservation.restaurant.name, reservation.restaurant %> for <%= reservation.start_date_time.strftime("%A, %B %e @ %l:%m %p") %>
+			 | <%= link_to "Cancel Reservation", reservation, method: :delete, data: { confirm: "Are you sure you want to cancel this reservation?"} %>
+		</li>
 	<% end -%>
 </ul>
 
