--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @restaurant do |f| %>
+<%= form_for @restaurant, :html => {:multipart => true} do |f| %>
 	<p>
 	<%= f.label :name %> <br>
 	<%= f.text_field :name %>
@@ -60,6 +60,12 @@
 				<%= type.name %>
 			</label>
 		<% end -%>
+	</p>
+
+	<p>
+		<%= f.label :attachment %>
+		<%= f.file_field :attachment %>
+		<%= f.hidden_field :attachment_cache %>
 	</p>
 
 	<p><%= f.submit %></p>
