--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,6 +19,10 @@
 <%= mail_to @restaurant.email, @restaurant.email %></p>
 </div>
 
+<div class="photos">
+	<img src="<%= @restaurant.attachment_url %>">
+</div>
+
 <p>
 	<%= link_to "Home", root_path %> 
 	<% if current_user && current_user.id == @restaurant.id && current_user.is_a?(Restaurant)%>
