--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -46,3 +46,48 @@
 		| <%= link_to "Edit", edit_restaurant_path(@restaurant) %>
 	<% end %>
 </p>
+
+<% if current_user %>
+  <h3>Reviews</h3>
+
+  <p>Reviews for <%= @restaurant.name %></p>
+
+  <% @restaurant.reviews.each do |review| %>
+    <p>
+      <%= review.comment %>
+      <br>
+      <% if review.customer != nil %>
+        <em> by <%= review.customer.name %></em>
+        Added on: <%= review.created_at %>
+      <% end %>
+    </p>
+  <% end %>
+
+
+
+  <h4>New Review</h4>
+
+  <%= form_for([@restaurant, @review]) do |f| %>
+    <% if @review.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
+
+        <ul>
+        <% @review.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :comment %><br />
+      <%= f.text_area :comment %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
+<% else %>
+  <p>Please <%= link_to "log in", new_session_path %> to add a review.</p>
+<% end %>
