--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -61,6 +61,9 @@
         Added on: <%= review.created_at %>
       <% end %>
     </p>
+    <% if current_user && current_user.id == @customer.id && current_user.is_a?(Customer) && review.id %>
+      <%= link_to "Delete", review_path(review), method: :delete  %>
+    <% end -%>
   <% end %>
 
 
